# dde-control-center

./: .gitignore  CMakeLists.txt
dcc-old/: CMakeLists.txt
misc/configs/: org.deepin.dde.control-center.power.json
qml/plugins_v1.0/demo/: demo.qml
src/dde-control-center/: CMakeLists.txt  dccmanager.cpp  dccmanager.h  main.cpp  pluginmanager.cpp
src/dde-control-center/frame/: dccobject.cpp
src/plugin-accounts/operation/: accountscontroller.cpp  accountscontroller.h  biometricauthcontroller.cpp  biometricauthcontroller.h  charamangermodel.h
src/plugin-accounts/qml/: AddFaceinfoDialog.qml  AddFingerDialog.qml  BiometricAuth.qml  LoginMethod.qml
src/plugin-personalization/: CMakeLists.txt
src/plugin-personalization/operation/: personalizationdbusproxy.cpp  personalizationdbusproxy.h  personalizationexport.hpp  personalizationinterface.cpp  personalizationinterface.h  personalizationmodel.cpp  personalizationmodel.h  personalizationworker.cpp  personalizationworker.h  screensaverprovider.cpp  screensaverprovider.h  treelandworker.cpp  treelandworker.h  utils.hpp  wallpaperworker.cpp  wallpaperworker.h  x11worker.cpp  x11worker.h
src/plugin-personalization/operation/model/: fontmodel.cpp  fontmodel.h  fontsizemodel.h  wallpapermodel.cpp  wallpapermodel.h
src/plugin-personalization/operation/qrc/: personalization.qrc
src/plugin-personalization/qml/: ColorAndIcons.qml  FontCombobox.qml  FontSizePage.qml  IconThemeGridView.qml  InterfaceEffectListview.qml  ScreenSaverPage.qml  ScreenTab.qml  ThemeSelectView.qml  WallpaperPage.qml  WallpaperSelectView.qml  WindowEffectPage.qml  main.qml  personalization.qml  personalizationMain.qml
src/plugin-personalization/window/: personalizationdesktopmodule.cpp
src/plugin-power/qml/: CommonPage.qml  (+9 more)
src/plugin-privacy/: CMakeLists.txt
src/plugin-privacy/operation/: applicationitem.cpp  applicationitem.h  dde-apps.h  privacysecuritydataproxy.cpp  privacysecuritydataproxy.h  privacysecurityexport.cpp  privacysecurityexport.h  privacysecuritymodel.cpp  privacysecuritymodel.h  privacysecurityworker.cpp  privacysecurityworker.h
src/plugin-privacy/operation/qrc/: privacy.qrc
src/plugin-privacy/qml/: Camera.qml  FileAndFolder.qml  main.qml  privacy.qml
translations/: dde-control-center.ts  dde-control-center_es.ts  dde-control-center_zh_CN.ts
(+20 files in other folders)
